Bug 1907259 - [devtools] Fix the hover breakpoint styling when line wrapping is on r=devtools-reviewers,nchevobbe
Differential Revision: https://phabricator.services.mozilla.com/D216553

--- a/devtools/client/debugger/src/components/Editor/Breakpoints.css
+++ b/devtools/client/debugger/src/components/Editor/Breakpoints.css
@@ -40,7 +40,7 @@
 .cm-lineNumbers .cm-gutterElement:not(.empty-line, .cm6-gutter-breakpoint):hover {
   background: url(chrome://devtools/content/debugger/images/breakpoint.svg) no-repeat;
   background-size: auto 15px;
-  background-position: right;
+  background-position: top right;
   -moz-context-properties: fill, stroke;
   fill: var(--gutter-hover-background-color);
   stroke: var(--gutter-hover-background-color);
